syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GenerateRandomNumber(RandomNumberRequest) returns (RandomNumberReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message RandomNumberRequest {
  int32 number = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message RandomNumberReply {
  repeated float numbers = 1;
}
